Addressed various user complaints inluding: Task Bar Alignment Issues Text Issues Other General Design Issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
   text-align: center;
 }
 #img1{
-  width:40%;
+  width:30%;
 }
 #title{
   font-style: normal;
@@ -19,6 +19,7 @@
 #Logo{
   height:5%;
 }
+
 
 .App-logo {
   height: 40vmin;
